--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XLRPE6R0XX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-XLRPE6R0XX');
+    </script>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -83,14 +91,12 @@
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#promociones" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true">
-                    <i class="fas fa-chevron-left"></i>  <!-- Icono de Font Awesome para la flecha izquierda -->
-                </span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#promociones" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true">
-                    <i class="fas fa-chevron-right"></i> <!-- Icono de Font Awesome para la flecha derecha -->
-                </span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
             </button>
         </section>
 
@@ -149,6 +155,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Vinimex® Total Antiviral 19 Litros</div>
+                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
                             </div>
                         </div>
                     </div>
@@ -163,6 +170,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Vinimex® Clásica 19 Litros</div>
+                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
                             </div>
                         </div>
                     </div>
@@ -177,6 +185,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Vinimex® 3 en 1 - 19 Litros</div>
+                                <div class="portfolio-caption-subheading text-muted">Identity</div>
                             </div>
                         </div>
                     </div>
@@ -191,6 +200,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Pro 1000 Plus® 19 Litros</div>
+                                <div class="portfolio-caption-subheading text-muted">Branding</div>
                             </div>
                         </div>
                     </div>
@@ -205,6 +215,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Durex Master® 19 Litros</div>
+                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
                             </div>
                         </div>
                     </div>
@@ -219,6 +230,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Adhetop® 19 Litros</div>
+                                <div class="portfolio-caption-subheading text-muted">Photography</div>
                             </div>
                         </div>
                     </div>
@@ -333,7 +345,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/6.png" alt="..." />
                             <h4>Oficina Central</h4>
                             <p class="text-muted">Av. Benjamin Franklin 16 Col. Escandon I, Miguel Hidalgo, 11800 Ciudad de México, CDMX</p>
-                            <p class="text-muted"><strong>Tel:</strong>5593106460</p>
+                            <p class="text-muted"><strong>Tel:</strong>5593106461</p>
 
                         </div>
                     </div>
