Update for Mobile

--- a/index.html
+++ b/index.html
@@ -90,14 +90,7 @@
                     <img src="assets/img/Propociones/9.webp" class="d-block w-100" alt="Promoción 9">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#promociones" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#promociones" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-            </button>
+            
         </section>
 
 
@@ -421,7 +414,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; Grupo DanCarMar 2025</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/grupo_dancarmar_of/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/share/1BDYjJ6C9t/?mibextid=wwXIfr" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/grupo-dancarmar/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>    
