Update Numeros Celulares

--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
                     <img src="assets/img/Propociones/9.webp" class="d-block w-100" alt="Promoción 9">
                 </div>
             </div>
-            
         </section>
-
-
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
@@ -310,20 +307,24 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Sucursal "Aeropuerto"</h4>
                             <p class="text-muted">Sur 109 1229 C, Aeronáutica Militar, Venustiano Carranza, 15970 Ciudad de México, CDMX</p>
+                            <p class="text-muted"><strong>Tel:</strong> 5610496351</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.png" alt="..." />
                             <h4>Sucursal "Tezozomoc"</h4>
-                            <p class="text-muted">Moctezuma, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</p>
+                            <p class="text-muted">Moctezuma 11, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</p>
+                            <p class="text-muted"><strong>Tel:</strong> 5610460305</p>
                         </div>
+
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/4.png" alt="..." />
                             <h4>Sucursal "Montevideo"</h4>
                             <p class="text-muted">Av. Montevideo 63-A, Tepeyac Insurgentes, Gustavo A. Madero, 07870 Ciudad de México, CDMX</p>
+                            <p class="text-muted"><strong>Tel:</strong> 5610467976</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -331,6 +332,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/5.png" alt="..." />
                             <h4>Sucursal "Tola"</h4>
                             <p class="text-muted">Av. Acueducto de Guadalupe 452, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</p>
+                            <p class="text-muted"><strong>Tel:</strong> 5610481135</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -338,7 +340,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/6.png" alt="..." />
                             <h4>Oficina Central</h4>
                             <p class="text-muted">Av. Benjamin Franklin 16 Col. Escandon I, Miguel Hidalgo, 11800 Ciudad de México, CDMX</p>
-                            <p class="text-muted"><strong>Tel:</strong>5593106461</p>
+                            <p class="text-muted"><strong>Tel:</strong> 5593106461</p>
 
                         </div>
                     </div>
