--- a/index.html
+++ b/index.html
@@ -295,18 +295,18 @@
                     <h3 class="section-subheading text-muted">Encuentra tu sucursal más cercana y visítanos para recibir la mejor atención.</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3">
-                        <div class="team-member">
+                    <div class="col-lg-3"  >
+                        <div class="team-member" >
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.png" alt="..." />
-                            <h4>Sucursal "La Villa"</h4>
-                            <p class="text-muted">Calz de Guadalupe 707, Aragón La Villa(Aragón), Gustavo A. Madero, 07770 Ciudad de México, CDMX</p>
+                            <h4 >Sucursal "La Villa"</h4>
+                            <a href="https://maps.app.goo.gl/edJabeKAo74nLGA4A" class="text-muted">Calz de Guadalupe 707, Aragón La Villa(Aragón), Gustavo A. Madero, 07770 Ciudad de México, CDMX </a>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Sucursal "Aeropuerto"</h4>
-                            <p class="text-muted">Sur 109 1229 C, Aeronáutica Militar, Venustiano Carranza, 15970 Ciudad de México, CDMX</p>
+                            <a href="https://maps.app.goo.gl/YN1ivXyRLGxHhRK96" class="text-muted">Sur 109 1229 C, Aeronáutica Militar, Venustiano Carranza, 15970 Ciudad de México, CDMX</a>
                             <p class="text-muted"><strong>Tel:</strong> 5610496351</p>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.png" alt="..." />
                             <h4>Sucursal "Tezozomoc"</h4>
-                            <p class="text-muted">Moctezuma 11, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</p>
+                            <a href="https://maps.app.goo.gl/yxKWLGruCvbjsYKNA" class="text-muted">Moctezuma 11, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</a>
                             <p class="text-muted"><strong>Tel:</strong> 5610460305</p>
                         </div>
 
@@ -323,7 +323,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/4.png" alt="..." />
                             <h4>Sucursal "Montevideo"</h4>
-                            <p class="text-muted">Av. Montevideo 63-A, Tepeyac Insurgentes, Gustavo A. Madero, 07870 Ciudad de México, CDMX</p>
+                            <a href="https://maps.app.goo.gl/rzvt7iebmRqxRYTj6" class="text-muted">Av. Montevideo 63-A, Tepeyac Insurgentes, Gustavo A. Madero, 07870 Ciudad de México, CDMX</a>
                             <p class="text-muted"><strong>Tel:</strong> 5610467976</p>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/5.png" alt="..." />
                             <h4>Sucursal "Tola"</h4>
-                            <p class="text-muted">Av. Acueducto de Guadalupe 452, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</p>
+                            <a href="https://maps.app.goo.gl/CoBdhGAdH4v3VS8x6" class="text-muted">Av. Acueducto de Guadalupe 452, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</a>
                             <p class="text-muted"><strong>Tel:</strong> 5610481135</p>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/6.png" alt="..." />
                             <h4>Oficina Central</h4>
-                            <p class="text-muted">Av. Benjamin Franklin 16 Col. Escandon I, Miguel Hidalgo, 11800 Ciudad de México, CDMX</p>
+                            <a href="https://maps.app.goo.gl/po6wCahn6LFSkFgL6" class="text-muted">Av. Benjamin Franklin 16 Col. Escandon I, Miguel Hidalgo, 11800 Ciudad de México, CDMX</a>
                             <p class="text-muted"><strong>Tel:</strong> 5593106461</p>
 
                         </div>
