--- a/index.html
+++ b/index.html
@@ -89,7 +89,22 @@
                 <div class="carousel-item">
                     <img src="assets/img/Propociones/9.webp" class="d-block w-100" alt="Promoción 9">
                 </div>
+                <div class="carousel-item">
+                    <img src="assets/img/Propociones/10.webp" class="d-block w-100" alt="Promoción 10">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/Propociones/11.webp" class="d-block w-100" alt="Promoción 11">
+                </div>
             </div>
+        <!-- Controles de navegación -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#promociones" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#promociones" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
         </section>
         <!-- Services-->
         <section class="page-section" id="services">
@@ -297,51 +312,61 @@
                 <div class="row">
                     <div class="col-lg-3"  >
                         <div class="team-member" >
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.png" alt="..." />
+                            <a href="https://maps.app.goo.gl/edJabeKAo74nLGA4A" target="_blank">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/1.png" alt="..." />
+                            </a>
                             <h4 >Sucursal "La Villa"</h4>
-                            <a href="https://maps.app.goo.gl/edJabeKAo74nLGA4A" class="text-muted">Calz de Guadalupe 707, Aragón La Villa(Aragón), Gustavo A. Madero, 07770 Ciudad de México, CDMX </a>
+                            <p class="text-muted">Calz de Guadalupe 707, Aragón La Villa(Aragón), Gustavo A. Madero, 07770 Ciudad de México, CDMX </p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
+                            <a href="https://maps.app.goo.gl/YN1ivXyRLGxHhRK96" target="_blank">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
+                            </a>
                             <h4>Sucursal "Aeropuerto"</h4>
-                            <a href="https://maps.app.goo.gl/YN1ivXyRLGxHhRK96" class="text-muted">Sur 109 1229 C, Aeronáutica Militar, Venustiano Carranza, 15970 Ciudad de México, CDMX</a>
-                            <p class="text-muted"><strong>Tel:</strong> 5610496351</p>
+                            <p href="https://maps.app.goo.gl/YN1ivXyRLGxHhRK96" class="text-muted">Sur 109 1229 C, Aeronáutica Militar, Venustiano Carranza, 15970 Ciudad de México, CDMX</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/message/Z6MGVW23MY5CF1" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.png" alt="..." />
+                            <a href="https://maps.app.goo.gl/yxKWLGruCvbjsYKNA">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/3.png" alt="..." />
+                            </a>
                             <h4>Sucursal "Tezozomoc"</h4>
-                            <a href="https://maps.app.goo.gl/yxKWLGruCvbjsYKNA" class="text-muted">Moctezuma 11, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</a>
-                            <p class="text-muted"><strong>Tel:</strong> 5610460305</p>
+                            <p class="text-muted">Moctezuma 11, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/message/UZJVBOGPW5PIM1" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
-
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/4.png" alt="..." />
+                            <a href="https://maps.app.goo.gl/rzvt7iebmRqxRYTj6">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/4.png" alt="..." />
+                            </a>
                             <h4>Sucursal "Montevideo"</h4>
-                            <a href="https://maps.app.goo.gl/rzvt7iebmRqxRYTj6" class="text-muted">Av. Montevideo 63-A, Tepeyac Insurgentes, Gustavo A. Madero, 07870 Ciudad de México, CDMX</a>
-                            <p class="text-muted"><strong>Tel:</strong> 5610467976</p>
+                            <p class="text-muted">Av. Montevideo 63-A, Tepeyac Insurgentes, Gustavo A. Madero, 07870 Ciudad de México, CDMX</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/message/UZJVBOGPW5PIM1" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/5.png" alt="..." />
+                            <a href="https://maps.app.goo.gl/CoBdhGAdH4v3VS8x6">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/5.png" alt="..." />
+                            </a>
                             <h4>Sucursal "Tola"</h4>
-                            <a href="https://maps.app.goo.gl/CoBdhGAdH4v3VS8x6" class="text-muted">Av. Acueducto de Guadalupe 452, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</a>
-                            <p class="text-muted"><strong>Tel:</strong> 5610481135</p>
+                            <p class="text-muted">Av. Acueducto de Guadalupe 452, Santa Isabel Tola, Gustavo A. Madero, 07010 Ciudad de México, CDMX</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/message/WV4GO5R4QZ3QH1" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/6.png" alt="..." />
+                            <a href="https://maps.app.goo.gl/po6wCahn6LFSkFgL6">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/6.png" alt="..." />
+                            </a>
                             <h4>Oficina Central</h4>
-                            <a href="https://maps.app.goo.gl/po6wCahn6LFSkFgL6" class="text-muted">Av. Benjamin Franklin 16 Col. Escandon I, Miguel Hidalgo, 11800 Ciudad de México, CDMX</a>
+                            <p class="text-muted">Av. Benjamin Franklin 16 Col. Escandon I, Miguel Hidalgo, 11800 Ciudad de México, CDMX</p>
                             <p class="text-muted"><strong>Tel:</strong> 5593106461</p>
-
                         </div>
                     </div>
                 </div>
@@ -354,60 +379,21 @@
                     <h2 class="section-heading text-uppercase">Cotiza tu material</h2>
                     <h3 class="section-subheading text-muted">Solicita una cotización personalizada y obtén los mejores precios en pintura y recubrimientos para tu proyecto.</h3>
                 </div>
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <!-- Name input-->
-                                <input class="form-control" id="name" type="text" placeholder="Escribe tu nombre *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="name:required">Es necesario escribir un nombre</div>
+                    <form action="send.php" method="POST">
+                        <div class="row align-items-stretch mb-5">
+                            <div class="col-md-6">
+                                <input class="form-control" name="name" type="text" placeholder="Escribe tu nombre *" required />
+                                <input class="form-control" name="email" type="email" placeholder="Escribe tu correo *" required />
+                                <input class="form-control" name="phone" type="tel" placeholder="Escribe tu numero celular *" required />
                             </div>
-                            <div class="form-group">
-                                <!-- Email address input-->
-                                <input class="form-control" id="email" type="email" placeholder="Escribe tu correo *" data-sb-validations="required,email" />
-                                <div class="invalid-feedback" data-sb-feedback="email:required">Es necesario un correo valido</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">El correo es invalido</div>
-                            </div>
-                            <div class="form-group mb-md-0">
-                                <!-- Phone number input-->
-                                <input class="form-control" id="phone" type="tel" placeholder="Escribe tu numero celular *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">Es necesario un numero celular</div>
+                            <div class="col-md-6">
+                                <textarea class="form-control" name="message" placeholder="Cuéntanos qué necesitas *" required></textarea>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-md-0">
-                                <!-- Message input-->
-                                <textarea class="form-control" id="message" placeholder="Cuentanos que necesitas *" data-sb-validations="required"></textarea>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">Es necesario un mensaje</div>
-                            </div>
+                        <div class="text-center">
+                            <button class="btn btn-primary btn-xl text-uppercase" type="submit">Contactanos</button>
                         </div>
-                    </div>
-                    <!-- Submit success message-->
-                    <!---->
-                    <!-- This is what your users will see when the form-->
-                    <!-- has successfully submitted-->
-                    <div class="d-none" id="submitSuccessMessage">
-                        <div class="text-center text-white mb-3">
-                            <div class="fw-bolder">Formulario Enviado Correctamente</div>
-                            <br />
-                            <a href="https://startbootstrap.com/solution/contact-forms"></a>
-                        </div>
-                    </div>
-                    <!-- Submit error message-->
-                    <!---->
-                    <!-- This is what your users will see when there is-->
-                    <!-- an error submitting the form-->
-                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Hubo un error al mandar el formulario</div></div>
-                    <!-- Submit Button-->
-                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Contactanos</button></div>
-                </form>
+                    </form>
             </div>
         </section>
         <!-- Footer-->
