--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <header class="masthead">
             <div class="container">
                 <img class="masthead-subheading" src="assets/img/navbar-logo.png" alt="">
-                <div class="masthead-heading text-uppercase">Bienvenido</div>
+                <div class="masthead-subheading">Grupo DanCarMar es una concesión de Comex, dedicada a la venta de pinturas y recubrimientos, ofreciendo un servicio excepcional y productos de alta calidad para satisfacer las necesidades de nuestros clientes.</div>
+                <div class="masthead-subheading">Contamos con una amplia gama de productos, incluyendo pinturas vinílicas, esmaltes, impermeabilizantes y recubrimientos industriales, todos diseñados para brindar durabilidad y protección a tus espacios.</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#promociones">Conocenos!</a>
             </div>
         </header>
