--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <img class="masthead-subheading" src="assets/img/navbar-logo.png" alt="">
+                <img class="masthead-heading" src="assets/img/navbar-logo.png" alt="">
                 <div class="masthead-subheading">Grupo DanCarMar es una concesión de Comex, dedicada a la venta de pinturas y recubrimientos, ofreciendo un servicio excepcional y productos de alta calidad para satisfacer las necesidades de nuestros clientes.</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#promociones">Conocenos!</a>
             </div>
