--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
                         <select class="form-control" name="service" required 
                                 style="border-radius: 0; border-left: 3px solid #dbe060; padding: 12px 15px; height: 46px; appearance: none; background: url('data:image/svg+xml;utf8,<svg fill="black" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>') no-repeat right 10px center; background-color: white;">
                             <option value="" disabled selected>Selecciona una opción</option>
-                            <option value="tempi-como">Dudas de Aplicación</option>
-                            <option value="marmol-de-ola">Cotizar Material</option>
+                            <option value="Dudas de Aplicación">Dudas de Aplicación</option>
+                            <option value="Cotizar Material">Cotizar Material</option>
                         </select>
                     </div>
                     <div class="form-group">
